fix for the results link icon being aligned with container

--- a/_assets/stylesheets/application.scss
+++ b/_assets/stylesheets/application.scss
@@ -276,7 +276,7 @@ main.hero-gradient {
     padding-right: 0.5em;
     font-weight: 700;
     display: table-cell;
-    & + a {
+    & + span {
       line-height: 2em;
       vertical-align: bottom;
       font-weight: 700;
